force-app/main/default/objects/AVO_SharePoint_File_Log__c/AVO_SharePoint_File_Log__c.object-meta.xml
<CustomObject>
    <label>SharePoint File Log</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SharePoint File Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>