force-app/main/default/objects/AVO_SharePoint_File_Log__c/fields/AVO_Application_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Application_Name__c</fullName>
    <label>AVO Application Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>