force-app/main/default/objects/AVO_SharePoint_File_Log__c/fields/AVO_Comment__c.field-meta.xml
<CustomField>
    <fullName>AVO_Comment__c</fullName>
    <label>AVO Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>