force-app/main/default/objects/AVO_SharePoint_File_Log__c/fields/AVO_File_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_File_Name__c</fullName>
    <label>AVO File Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>