force-app/main/default/objects/AVO_SharePoint_File_Log__c/fields/AVO_Permit_Name__c.field-meta.xml
<CustomField>
    <fullName>AVO_Permit_Name__c</fullName>
    <label>AVO Permit Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>