force-app/main/default/objects/AVO_SharePoint_File_Log__c/fields/AVO_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Status__c</fullName>
    <label>AVO Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Moved</fullName>
            </value>
            <value>
                <fullName>Link Generated</fullName>
            </value>
            <value>
                <fullName>Duplicate Found</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Parent Not Found</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>